fix pager children layout when width is too small

--- a/client/web/divkit/src/components/pager/Pager.module.css
+++ b/client/web/divkit/src/components/pager/Pager.module.css
@@ -16,6 +16,20 @@
     display: none;
 }
 
+.pager__item {
+    display: grid;
+    max-height: 100%;
+    max-width: 100%;
+    overflow: hidden;
+    scroll-snap-align: center;
+}
+
+@supports (overflow: clip) {
+    .pager__item {
+        overflow: clip;
+    }
+}
+
 .pager_orientation_horizontal .pager__items {
     justify-content: start;
     grid-auto-flow: column;
